# englishspeak-grader

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  app.py  package.sh  pyproject.toml  run.bat  run.command  run.sh
core/: __init__.py  audio.py  database.py  export.py  gemini_client.py  prompts.py  rubrics.py  schemas.py  video.py
tests/: conftest.py  test_app_cache.py  test_app_rubric.py  test_app_ui.py  test_audio.py  test_database.py  test_export.py  test_gemini_client.py  test_prompts.py  test_rubrics.py  test_video.py
