[project]
name = "englishspeak-grader"
version = "0.1.0"
description = "App AI (Gemini) hỗ trợ giáo viên tiếng Anh chấm bài nói qua video: bảng điểm, nhận xét, gợi ý cải thiện theo rubric quốc tế + rubric tùy chỉnh."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "gradio>=6.0,<7",
    "pydantic>=2.7.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "imageio-ffmpeg>=0.6.0",
]

[tool.uv]
# uv sẽ tự tạo venv và cài đúng phiên bản deps ở trên khi chạy `uv run`.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]
