[project]
name = "englishspeak-grader"
version = "0.1.0"
description = "App AI (Gemini) hỗ trợ giáo viên tiếng Anh chấm bài nói qua video: bảng điểm, nhận xét, gợi ý cải thiện theo rubric quốc tế + rubric tùy chỉnh."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Cận trên major cho MỌI lib: chặn nâng cấp tự động vớ phải major mới rồi gãy
    # API (như bug Gradio 4->6). Muốn lên major mới thì sửa tay có chủ đích.
    "google-genai>=2.0,<3",   # SDK AI đổi nhanh; đang chạy 2.10, từng viết lại lớn 1.x->2.x
    "gradio>=6.0,<7",         # 4->6 đã đổi Dataframe type + row_count; chặn 7.x
    "pydantic>=2.7,<3",       # API v2 ổn định; chặn v3 tương lai
    "openpyxl>=3.1,<4",
    "python-dotenv>=1.0,<2",
    "imageio-ffmpeg>=0.6,<1.0",  # lib 0.x: mọi minor đều có thể phá semver
]

[tool.uv]
# uv sẽ tự tạo venv và cài đúng phiên bản deps ở trên khi chạy `uv run`.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]
